--- a/config.ini
+++ b/config.ini
@@ -4,22 +4,23 @@ RepoName  = cobbledex-leaderboardV4
 Branch    = main
 
 [MODE]
-; Laisse "sftp" — c’est celui que ton script reconnaît
+# Laisse "sftp" – c’est celui que ton script reconnaît
 mode = sftp
 
 [SFTP]
-; ==== LECTURE AUTOMATIQUE ====
-; Le script lira automatiquement ces 2 fichiers texte en racine :
-; username.txt  → contient le nom d’utilisateur
-; password.txt  → contient le mot de passe
+# ==== LECTURE AUTOMATIQUE ====
+# Le script lira automatiquement ces deux fichiers texte à la racine :
+# username.txt → contient le nom d’utilisateur
+# password.txt → contient le mot de passe
+
 host = 109.239.157.170
 port = 22
 userfile = username.txt
 passfile = password.txt
 
-; Racine distante Nitroserv
+# Racine distante Nitroserv
 remote_root = /Minecraft
-world_name  = world
+world_name = world
 
 [PATHS]
 ; Chemins exacts des dossiers du serveur
@@ -38,3 +39,4 @@ Height    = 1
 ImagePath = images/top3.png
 leaderboards = vanilla/minecraft:custom/minecraft:pokemon_registered
 Titles       = Leaderboard - RANKS 1-10, Leaderboard - RANKS 11-20, Leaderboard - RANKS 21-30
+
