--- a/.github/workflows/cron15.yml
+++ b/.github/workflows/cron15.yml
@@ -2,94 +2,127 @@ name: Cron leaderboard (robuste)
 
 on:
   schedule:
-    - cron: "*/15 * * * *"  # toutes les 15 minutes
+    - cron: "*/15 * * * *"    # toutes les 15 minutes UTC
   workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  run-leaderboard:
+  run:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-      # 🧩 Vérification avancée du fichier config.ini
-      - name: Vérification du fichier config.ini (robuste)
+      - name: Install dependencies (si présents)
         run: |
           set -e
-          echo "==== Vérification du fichier config.ini ===="
+          if [ -f requirements.txt ]; then
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+          else
+            echo "Pas de requirements.txt, on continue."
+          fi
 
-          if [ ! -f config.ini ]; then
-            echo "::error::config.ini introuvable à la racine du repo."
+      - name: Normaliser/forcer le config.ini maître et propager
+        shell: bash
+        run: |
+          set -e
+
+          ROOT_CFG="./config.ini"
+          if [ ! -f "$ROOT_CFG" ]; then
+            echo "::error ::config.ini introuvable à la racine du repo."
             exit 1
           fi
 
-          echo "✅ Fichier config.ini trouvé."
-          echo "----- Contenu brut (quelques lignes) -----"
-          sed -n '1,120p' config.ini | sed -e 's/\t/␉/g'
+          # 1) Normalise CRLF -> LF
+          python - <<'PY'
+import io
+p = "config.ini"
+with open(p, "rb") as f:
+    data = f.read()
+data = data.replace(b"\r\n", b"\n")
+with open(p, "wb") as f:
+    f.write(data)
+print("config.ini normalisé (LF).")
+PY
 
-          # 1️⃣ Supprimer BOM et retours chariot Windows
-          sed -i '1s/^\xEF\xBB\xBF//' config.ini
-          sed -i 's/\r//g' config.ini
+          # 2) Ecrire/forcer mode = sftp dans la section [MODE]
+          python - <<'PY'
+import configparser, io, sys
 
-          echo "-----------------------------------------"
-          echo "Recherche du mode dans le fichier..."
+p = "config.ini"
+cfg = configparser.ConfigParser()
+# conserver la casse des options
+cfg.optionxform = str
+with open(p, "r", encoding="utf-8") as f:
+    s = f.read()
 
-          # 2️⃣ Extraire la valeur du mode
-          MODE=$(
-            awk -F'=' '
-              BEGIN{IGNORECASE=1}
-              /^\s*\[MODE\]\s*$/ {inmode=1; next}
-              inmode && /^\s*\[/ {inmode=0}
-              inmode && /^\s*mode\s*=/ {
-                v=$2
-                gsub(/\r/,"",v)
-                gsub(/^[ \t"]+|[ \t"]+$/,"",v)
-                print tolower(v)
-                exit
-              }
-            ' config.ini
-          )
+# Si pas de section [MODE], on la crée en tête
+if "[MODE]" not in s:
+    s = s.rstrip() + "\n\n[MODE]\nmode = sftp\n"
 
-          HEX=$(echo -n "$MODE" | xxd -p)
-          echo "🟢 Mode détecté   : '$MODE'"
-          echo "🔎 Mode en hex    : $HEX"
+# On réécrit proprement : remplace la ligne "mode = ..." dans [MODE] par "mode = sftp"
+lines = s.splitlines()
+out = []
+in_mode = False
+touched = False
+for line in lines:
+    if line.strip().startswith("[") and line.strip().endswith("]"):
+        in_mode = (line.strip().lower() == "[mode]")
+        out.append(line)
+        continue
+    if in_mode and line.strip().lower().startswith("mode"):
+        out.append("mode = sftp")
+        touched = True
+    else:
+        out.append(line)
 
-          # 3️⃣ Validation
-          case "$MODE" in
-            manual|local|ftp|sftp)
-              echo "✅ Mode valide : $MODE"
-              ;;
-            *)
-              echo "::error::Mode invalide : '$MODE'. Le mode doit être 'manual', 'local', 'ftp' ou 'sftp'."
-              exit 1
-              ;;
-          esac
+if in_mode and not touched:
+    out.append("mode = sftp")
 
-      # 🚀 Lancement du script Python
-      - name: Run python main.py
+with open(p, "w", encoding="utf-8") as f:
+    f.write("\n".join(out) + "\n")
+print("Section [MODE] forcée sur 'mode = sftp'.")
+PY
+
+          echo "----- config.ini maître (raccourci) -----"
+          sed -n '1,120p' "$ROOT_CFG"
+
+          # 3) Propager ce config.ini maître à tout autre config.ini éventuellement présent
+          while IFS= read -r f; do
+            if [ "$f" != "./config.ini" ]; then
+              echo "Propagate vers $f"
+              cp -f "$ROOT_CFG" "$f"
+            fi
+          done < <(find . -type f -name "config.ini" | sort)
+
+      - name: Run python main.py (racine)
         run: |
-          echo "Lancement du script Python..."
+          set -e
+          python --version
+          ls -la
+          # Lancer depuis la racine (main.py doit être à la racine du repo)
           python main.py
 
-      # ✅ Commit automatique si des fichiers sont modifiés (par ex. images générées)
       - name: Commit & push changes (images/top3.png)
+        if: always()
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add images/*.png || true
-          git commit -m "Update leaderboard images [bot]" || echo "Aucun changement à commit"
-          git push || echo "Aucun push nécessaire"
+          set -e
+          git config user.name  "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add -A
+          # Ne commit que s'il y a des modifications (image régénérée, etc.)
+          if ! git diff --cached --quiet; then
+            git commit -m "Auto-update from cron"
+            git push
+          else
+            echo "Aucun changement à pousser."
+          fi
