Refactor config.ini structure and sections

--- a/config.ini
+++ b/config.ini
@@ -3,19 +3,27 @@ RepoOwner = NeliKkTv
 RepoName  = cobbledex-leaderboardV4
 Branch    = main
 
-[MODE]
-# Laisse "sftp" – c’est celui que ton script reconnaît
-mode = sftp
+[INPUT]
 
-[SFTP]
-# ==== LECTURE AUTOMATIQUE ====
-# Le script lira automatiquement ces deux fichiers texte à la racine :
-# username.txt → contient le nom d’utilisateur
-# password.txt → contient le mot de passe
-host = 109.239.157.170
-port = 22
-userfile = username.txt
-passfile = password.txt
+# How do you wish to input the data files to the script? Valid values: manual, local, ftp, sftp (default: manual)
+# manual: upload manually all the files in the relevant folders in the data folder
+# local: use the folder of a server present on this computer
+# ftp: use an ftp connection to a distant server
+# sftp: use an sftp connection to a distant server
+Mode = sftp
+
+## LOCAL (change this config only if you use local)
+# Write here the path to the root of your server. It can be an absolute path or a relative path starting at this project folder's root (default: null)
+LocalPath = null
+
+## FTP and SFTP (change this config only if you use ftp or sftp)
+# Write here host address (default: null)
+Host = 109.239.157.170
+# Write here port number (default: 21)
+Port = 22
+# If FTP or SFTP is in use, you need to create 2 files and put them at the ROOT of the project (next to this config):
+# username.txt, containing ONLY the username
+# password.txt, containing ONLY the password
 
 # Racine distante Nitroserv
 remote_root = /Minecraft
@@ -38,5 +46,6 @@ Height    = 1
 ImagePath = images/top3.png
 leaderboards = vanilla/minecraft:custom/minecraft:pokemon_registered
 Titles       = Leaderboard - RANKS 1-10, Leaderboard - RANKS 11-20, Leaderboard - RANKS 21-30
+
 
 
