--- a/.github/workflows/cron15.yml
+++ b/.github/workflows/cron15.yml
@@ -1,54 +1,90 @@
-name: Simple Cron Leaderboard
+name: Cron leaderboard (robuste)
 
 on:
   schedule:
-    - cron: "*/15 * * * *"   # toutes les 15 minutes
-  workflow_dispatch:          # permet de le lancer manuellement
+    - cron: "*/15 * * * *"  # Toutes les 15 minutes
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
-  run:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout du dépôt
+      # 1️⃣ Cloner le dépôt
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Configuration de Python
+      # 2️⃣ Installer Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Installation des dépendances
+      # 3️⃣ Installer les dépendances
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
+      # 4️⃣ Vérifier le fichier config.ini
       - name: Vérification du fichier config.ini
         run: |
-          echo "=== Vérification de config.ini ==="
+          echo "=== Vérification du fichier config.ini ==="
           if [ ! -f config.ini ]; then
-            echo "::error::Le fichier config.ini est introuvable à la racine."
+            echo "::error ::config.ini introuvable à la racine du dépôt."
             exit 1
           fi
-          head -n 20 config.ini || true
+          echo "✅ Fichier config.ini trouvé."
+          echo "----- Contenu brut -----"
+          cat config.ini
+          echo "------------------------"
 
+      # 5️⃣ Normaliser les fins de ligne et forcer le mode SFTP
+      - name: Normaliser/forcer config.ini (mode=sftp)
+        shell: bash
+        run: |
+          echo "==> Normalisation du fichier config.ini..."
+          python - <<'PY'
+import pathlib
+p = pathlib.Path("config.ini")
+if not p.exists():
+    raise SystemExit("❌ Fichier config.ini introuvable")
+data = p.read_text(encoding="utf-8").replace("\r\n", "\n")
+if "[MODE]" not in data:
+    data = "[MODE]\nmode = sftp\n\n" + data
+else:
+    import re
+    data = re.sub(r"(?<=mode\s*=\s*)(\w+)", "sftp", data)
+p.write_text(data, encoding="utf-8")
+print("✅ config.ini normalisé et mode forcé à sftp.")
+PY
+
+      # 6️⃣ Lancer ton script principal
       - name: Exécution du script principal
         run: |
           echo "=== Lancement du script Python ==="
           python main.py
 
-      - name: Commit & push des images (si modifiées)
-        env:
-          GH_TOKEN: ${{ github.token }}
+      # 7️⃣ Commit & push automatique de l'image générée
+      - name: Commit & push updated leaderboard
+        if: success()
         run: |
+          echo "=== Commit et push du leaderboard ==="
           git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
-          git add -A
-          if git diff --cached --quiet; then
-            echo "Aucun changement détecté."
-            exit 0
-          fi
-
-          git commit -m "Auto-update: leaderboard images [skip ci]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add images/top3.png || echo "⚠️ Aucun fichier top3.png trouvé."
+          git commit -m "Update leaderboard image [auto]" || echo "Aucun changement à commit."
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # 8️⃣ Purger le cache jsDelivr pour forcer la mise à jour du lien public
+      - name: Purger le cache jsDelivr
+        if: success()
+        run: |
+          echo "=== Purge du cache jsDelivr ==="
+          curl -X PURGE "https://cdn.jsdelivr.net/gh/NelikkTv/cobbledex-leaderboardV4/images/top3.png" || true
+          echo "✅ Cache jsDelivr rafraîchi."
