--- a/.github/workflows/cron15.yml
+++ b/.github/workflows/cron15.yml
@@ -2,7 +2,7 @@ name: Cron leaderboard (robuste)
 
 on:
   schedule:
-    - cron: "*/15 * * * *"
+    - cron: "*/15 * * * *"   # exécution toutes les 15 minutes
   workflow_dispatch:
 
 permissions:
@@ -13,19 +13,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Cloner le dépôt
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2️⃣ Installer Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
+      # 3️⃣ Installer les dépendances
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
+      # 4️⃣ Vérification du fichier config.ini
       - name: Vérification du fichier config.ini
         run: |
           echo "=== Vérification du fichier config.ini ==="
@@ -38,6 +42,7 @@ jobs:
           cat config.ini
           echo "------------------------"
 
+      # 5️⃣ Normaliser et forcer le mode SFTP
       - name: Normaliser/forcer config.ini (mode=sftp)
         shell: bash
         run: |
@@ -60,22 +65,25 @@ jobs:
           print("✅ config.ini normalisé et mode forcé à sftp.")
           PY
 
+      # 6️⃣ Exécution du script principal Python
       - name: Exécution du script principal
         run: |
           echo "=== Lancement du script Python ==="
           python main.py
 
+      # 7️⃣ Commit & push de l’image générée (fonctionne en repo public)
       - name: Commit & push updated leaderboard
         if: success()
         run: |
+          echo "=== Commit et push du leaderboard ==="
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add images/top3.png || echo "⚠️ Aucun fichier top3.png trouvé."
           git commit -m "Update leaderboard image [auto]" || echo "Aucun changement à commit."
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git pull origin main --rebase || true
+          git push https://github.com/NelikkTv/cobbledex-leaderboardV4.git HEAD:main || true
 
+      # 8️⃣ Purger le cache jsDelivr (rafraîchit ton lien public)
       - name: Purger le cache jsDelivr
         if: success()
         run: |
